trying to fix menu cropped at the bottom for the address bar with js

--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,8 @@ html {
 
 html,
 body {
-  height: 100vh;
+  height: 100%;
   background-color: #ffbd5e;
-  /* height: -webkit-fill-available; */
 }
 
 img,
@@ -42,7 +41,6 @@ svg {
     "footer";
   grid-template-rows: 0.7fr 10fr 1.3fr;
   height: 100vh;
-  /* height: -webkit-fill-available; */
   background-image: url("./assets/imgs/bgFondo.png");
   background-size: cover;
   background-position: center;
